Properly preventing up arrow key default behavior if completion list is visible. Fix for completion replacement. Fix for list not always hiding itself.

--- a/app/styles/partials/_input-autocomplete.scss
+++ b/app/styles/partials/_input-autocomplete.scss
@@ -9,14 +9,15 @@
     right: 10px;
   }
 
-  .completions {
+  ul.completions {
     display: none;
     background: #fff;
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 0;
 
     li {
       list-style: none;
+      padding: 10px;
 
       &.highlighted {
         background: #ccc;
